Fix View Frame Source for iframe of a file:// URL shows main frame's filename

View Frame Source for iframe of a file:// URL used to show the main frame's
filename instead of the expected title derived from the iframe's page URL in
the form of "view-source:url". This CL fixes this and adds a browser test.

BUG=659040
TEST=browser_tests --gtest_filter=ChromeNavigationBrowserTest.TestViewFrameSource

Review-Url: https://codereview.chromium.org/2501083004
Cr-Commit-Position: refs/heads/master@{#435021}

Former-commit-id: 4d116bd4f43359ce057a60c82c2188c93d49a638